# Agentic-Research-Assistant-with-RAG-Evaluation

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ragas_eval.yml
data/evaluation/: rag_cache.json
src/: __init__.py  config.py
src/api/: __init__.py  main.py  models.py  routes.py
src/evaluation/: dashboard.py  golden_dataset.py  metrics_store.py  ragas_runner.py
src/ingestion/: __init__.py  arxiv_fetcher.py  chunker.py  pdf_parser.py  pipeline.py
src/mcp_server/: __init__.py  auth.py  server.py
src/rag/: __init__.py  chain.py  embeddings.py  hyde.py  retriever.py  vector_store.py
tests/: test_evaluation.py  test_ingestion.py  test_mcp_tools.py  test_rag_chain.py
